# NRD-Sample-fork

./: .args  3-PrepareSDK.bat  3-PrepareSDK.sh  3-Run de_dust2.bat  CLAUDE.md  CMakeLists.txt
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  gpu_resources.md  project_overview.md  rendering_pipeline.md  skinning.md  suggested_commands.md  task_completion.md
Shaders/: Composition.cs.hlsl  ConfidenceBlur.cs.hlsl  DlssAfter.cs.hlsl  DlssBefore.cs.hlsl  Final.cs.hlsl  RaytracingShared.hlsli  Shaders.cfg  SharcResolve.cs.hlsl  SharcUpdate.cs.hlsl  Shared.hlsli  Taa.cs.hlsl  TraceOpaque.cs.hlsl  TraceTransparent.cs.hlsl
Source/: NRDSample.cpp
